--- a/gb/nsc413_6.md
+++ b/gb/nsc413_6.md
@@ -1,5 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"></a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"></a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"></a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"></a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/brkhkd3127/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048225.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/10/cai-shaofen01-1-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048225.md#1" target="_blank">华春莹“反习”后 赵立坚“反党”言论引议</a><br></h3>曾深陷情色丑闻的中共外交部发言人赵立坚，近日再次闹出“国际笑话”......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048265.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-73458743-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048265.md#1" target="_blank">监视居住期满 湖南公民欧彪峰被移送看守所</a><br></h3>在被监视居住半年后，湖南民主人士欧彪峰近日被以移送看守所，面临被以......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13048481.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-73458743-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13048481.md#1" target="_blank">中国平安市值蒸发4000亿 或被债务拖垮</a><br></h3>中国平安保险股份有限公司（中国平安）股价近来连续下滑，市值已经蒸发......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048265.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13049625-117030255_1997359240398214_1872775719210522213_n-320x200.jpeg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048265.md#1" target="_blank">监视居住期满 湖南公民欧彪峰被移送看守所</a><br></h3>在被监视居住半年后，湖南民主人士欧彪峰近日被以移送看守所，面临被以......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13048484.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13048484.md#1" target="_blank">【翻墙必看】赵立坚“反党”言论再成笑柄</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
+
+1 . 华春莹“反习”......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048327.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13048489-0626-DJY-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048327.md#1" target="_blank">【新闻看点】港府人事大变 武汉军运会被曝怪异</a><br></h3>张建宗反共？港府人事大变；三警察晋级，香港将刮红色风暴；拜登力挺蘋......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13048702.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13048702.md#1" target="_blank">三退声明精选（2021/06/25）</a><br></h3>我曾于小学、初中时期分别误入过赤匪的少先队和共青团组织。幸而在之后......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13048479.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13048480-GettyImages-1233635243@1200x1200-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/26/n13048479.md#1" target="_blank">中共全面封杀比特币 矿工：一个时代宣告结束</a><br></h3>继上月中共国务院副总理刘鹤强调打击比特币挖矿和交易行为后，内蒙、青......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048292.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13048357-GettyImages-1027897778-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048292.md#1" target="_blank">关晓彤路透照被指像大爷遛弯 小演员帮澄清</a><br></h3>1997年出生的关晓彤以童星出道，从小就拥有超高人气。近日有网友曝......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048344.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13048403-1200-800-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048344.md#1" target="_blank">【秦鹏直播】抵制无效！Nike财报远超预期</a><br></h3>抵制无效！Nike财报远超预期；CEO一句话两头不讨好；惊人巧合......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13047893.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13047896-0625_1200x800-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13047893.md#1" target="_blank">【财商天下】经济复苏强劲 美联储何时加息？</a><br></h3>美国经济复苏强劲，真和政府发钱有关？中国居民不消费，原来是房贷高、......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048070.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/10/cai-shaofen01-1-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048070.md#1" target="_blank">蔡少芬一手抱娃一手做饭 站姿霸气也逗趣</a><br></h3>24日，港星蔡少芬在微博晒出与儿子温馨互动的一组照片。照片中，她一......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048225.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/07/GettyImages-1209379603-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048225.md#1" target="_blank">华春莹“反习”后 赵立坚“反党”言论引议</a><br></h3>曾深陷情色丑闻的中共外交部发言人赵立坚，近日再次闹出“国际笑话”......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048099.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037490-GettyImages-1231623079@1200x1200-320x200.jpeg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13048099.md#1" target="_blank">国际强硬发声 学者：应与无中共的中国往来</a><br></h3>6月中旬国际社会密集召开元首峰会之后，也正值7月1日中共“百年党庆......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月26日</td></tr>
@@ -21,14 +32,5 @@
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046925.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13000486-GettyImages-1311107771@1200x1200-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046925.md#1" target="_blank">再反转？ 中共官媒规劝特斯拉维权女车主</a><br></h3>日前，中共官方媒体发表了关于特斯拉风波的最新报导。文章称，经过对两......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046852.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046906-dongge-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046852.md#1" target="_blank">退休7年后 内蒙古政法委书记东戈被调查</a><br></h3>日前，已退休的内蒙古锡林郭勒盟前盟委委员、政法委书记东戈被通报遭调......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046742.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046742.md#1" target="_blank">涉操纵市场 深圳一公司董事长被罚1.98亿元</a><br></h3>6月24日晚，深圳市劲拓自动化设备有限公司（劲拓股份）发布公告称......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046619.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046619.md#1" target="_blank">中共七一临近 天安门周边道路陆续交通管制</a><br></h3>中共七一前夕，当局发公告称，自6月26日下午2时起，天安门地区及相......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046765.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046847-2106250317312378-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046765.md#1" target="_blank">赠疫苗回报311地震伸援 日外相：帮台湾真好</a><br></h3>日本外务大臣茂木敏充6月25日宣布7月中旬前对台湾追加提供100万......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046540.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2003/12/312190821628-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046540.md#1" target="_blank">赵紫阳故居被当局收回 家属开始搬家</a><br></h3>已故中共前总书记赵紫阳的故居被政府收回，日前其家人开始搬走故居内的......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/24/n13044183.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044186-b4e81c1925c4391dbaf8ae4d5393e407-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/24/n13044183.md#1" target="_blank">【珍言真语】陈朗昇：国安法下港媒生存困境</a><br></h3>香港国安6月17日突袭《苹果》后，有港人18日买《苹果日报》时悲观......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/24/n13045902.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046084-yang-mi-liu-shishi-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/24/n13045902.md#1" target="_blank">杨幂为刘诗诗整理领口 两人获赞互动有趣</a><br></h3>近日，大陆网络流出某活动的一支花絮片，杨幂和刘诗诗被安排同场拍摄团......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046043.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046615-0987-2021-06-25-134221-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046043.md#1" target="_blank">河南一武术馆火灾18死16伤 多为学生</a><br></h3>6月25日凌晨3时许，河南商丘柘城县远襄镇北街一武术馆发生火灾，事......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046171.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046230-c44ec91936c70cabadbd0f5f333799b0-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046171.md#1" target="_blank">宁波女大生被外教杀害案发酵 网民抨击校方态度</a><br></h3>有大陆网民披露，宁波工程学院的一名已婚外教奸杀女学生手段残忍，凶案......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046237.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046267-GettyImages-919204692@1200x1200-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046237.md#1" target="_blank">大陆“躺平”系列商品全线下架</a><br></h3>“躺平”一词源于今年4月17日百度贴吧的一个帖子《躺平即是正义》......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046246.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046449-2106250013582378-320x200.jpg" align ="left"></a><a href="https://github.com/mjhpml342/djy/blob/master/gb/21/6/25/n13046246.md#1" target="_blank">法国民议会跨党派提案 敦促挺台参与国际社会</a><br></h3>不顾中共抗议，法国国民议会6月22日正式提出“台湾参与国际组织工作......<br><img align="bottom" src="https://raw.githubusercontent.com/mjhpml342/www/master/t/ntdtv/time.gif">06月25日</td></tr>
 <tr><td><h3><a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_5.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;6&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_7.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mjhpml342/djy/blob/master/gb/nsc413_6.md#1<br><a href="https://github.com/mjhpml342/djy/blob/master/gb/nsc413_6.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mjhpml342/djy/blob/master/gb/nsc413_6.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413_6.htm">https://www.epochtimes.com/gb/nsc413_6.htm</a>    （国内需<a href="https://github.com/mjhpml342/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
